k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-app-service
  namespace: flask-app
  labels:
    app: flask-app
spec:
  type: LoadBalancer
  selector:
    app: flask-app
  ports:
  - name: http
    protocol: TCP
    port: 5000
    targetPort: 5000
